<resources>
    <string name="app_name">Cactus</string>
    <string name="languge">English</string>
    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="learn">Learn Russian with Cactus!</string>
    <string name="slogan">Every cactus blooms</string>
    <string name="basic">Basic lession</string>
    <string name="handwriting">Handwriting</string>
    <string name="num">Numbers</string>
    <string name="day">Days</string>
    <string name="month">Months</string>
    <string name="months">Months</string>
    <string name="nouns">Nouns</string>
    <string name="verbs">Verbs</string>
    <string name="adj">Adjectives</string>
    <string name="person">person; human</string>
    <string name="friend">friend</string>
    <string name="child">child; kid</string>
    <string name="woman">woman</string>
    <string name="man">man</string>
    <string name="boy">boy</string>
    <string name="girl">girl</string>
    <string name="girlfriend">young woman; girl; girlfriend</string>
    <string name="boyfriend">young man; boy; boyfriend</string>
    <string name="name">name</string>
    <string name="surname">surname; family name</string>
    <string name="boss">boss</string>
    <string name="visitor">visitor; guest</string>
    <string name="family">family</string>
    <string name="father">father</string>
    <string name="dad">dad</string>
    <string name="mother">mother</string>
    <string name="son">son</string>
    <string name="daughter">daughter</string>
    <string name="brother">brother</string>
    <string name="sister">sister</string>
    <string name="wife">wife</string>
    <string name="husband">husband</string>
    <string name="place">place</string>
    <string name="earth">earth</string>
    <string name="town">town, city</string>
    <string name="street">street</string>
    <string name="Moscow">Moscow</string>
    <string name="country">country</string>
    <string name="Russia">Russia</string>
    <string name="road">road</string>
    <string name="forest">forest</string>
    <string name="air">air</string>
    <string name="fire">fire</string>
    <string name="water">water</string>
    <string name="wind">wind</string>
    <string name="sun">sun</string>
    <string name="moon">moon</string>
    <string name="tree">tree</string>
    <string name="snow">snow</string>
    <string name="sky">sky</string>
    <string name="sea">sea</string>
    <string name="animal">animal</string>
    <string name="dog">dog</string>
    <string name="catmale">cat (male)</string>
    <string name="catfemale">cat (female)</string>
    <string name="mosquito">mosquito</string>
    <string name="house">house</string>
    <string name="apartment">apartment</string>
    <string name="door">door</string>
    <string name="window">window</string>
    <string name="table">table</string>
    <string name="room">room</string>
    <string name="book">book</string>
    <string name="light">light</string>
    <string name="dailyLife">Daily Life</string>
    <string name="money">money</string>
    <string name="letter">letter</string>
    <string name="school">school</string>
    <string name="university">university</string>
    <string name="car">car</string>
    <string name="computer">computer</string>
    <string name="laptop">laptop</string>
    <string name="phone">phone</string>
    <string name="earphones">earphones</string>
    <string name="charger">charger</string>
    <string name="website">website</string>
    <string name="app">app</string>
    <string name="game">game</string>
    <string name="help">help</string>
    <string name="breakfast">breakfast</string>
    <string name="lunch">lunch</string>
    <string name="dinner">dinner</string>
    <string name="time">time</string>
    <string name="minute">minute</string>
    <string name="hour">hour</string>
    <string name="day1">day</string>
    <string name="week">week</string>
    <string name="weekdays">weekdays</string>
    <string name="weekend">weekend</string>
    <string name="month1">month</string>
    <string name="year">year</string>
    <string name="night">night</string>
    <string name="life">life</string>
    <string name="morning">morning</string>
    <string name="evening">evening</string>
    <string name="bodyParts">Body Parts</string>
    <string name="head">head</string>
    <string name="face">face</string>
    <string name="eye">eye</string>
    <string name="nose">nose</string>
    <string name="ear">ear</string>
    <string name="voice">voice</string>
    <string name="body">body</string>
    <string name="arm">arm</string>
    <string name="leg">leg</string>
    <string name="finger">finger</string>
    <string name="back">back</string>
    <string name="heart">heart</string>
    <string name="blood">blood</string>
    <string name="rate">5 star rating</string>
    <string name="feedback">Feedback</string>
    <string name="common">Common Words</string>
    <string name="conver">Conversation</string>
    <string name="voca">Vocabulary topics</string>
    <string name="zero">Zero</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="five">Five</string>
    <string name="six">Six</string>
    <string name="seven">Seven</string>
    <string name="eight">Eight</string>
    <string name="nine">Nine</string>
    <string name="ten">Ten</string>
    <string name="eleven">Eleven</string>
    <string name="twelve">Twelve</string>
    <string name="thirtteen">thirtteen </string>
    <string name="fourteen">Fourteen</string>
    <string name="fifteen">Fifteen</string>
    <string name="sixteen">Sixteen</string>
    <string name="seventeen">Seventeen</string>
    <string name="eighteen">Eighteen</string>
    <string name="nineteen">Nineteen</string>
    <string name="twenty">Twenty</string>
    <string name="thirty">Thirty</string>
    <string name="forty">Forty</string>
    <string name="fifty">Fifty</string>
    <string name="sixty">Sixty</string>
    <string name="seventy">Seventy</string>
    <string name="eighty">Eighty</string>
    <string name="ninety">Ninety</string>
    <string name="onehundred">One hundred</string>
    <string name="twohundred">Two hundred</string>
    <string name="threehundred">Three hundred</string>
    <string name="fourhundred">Four hundred</string>
    <string name="fivehundred">Five hundred</string>
    <string name="sixhundred">Six hundred</string>
    <string name="sevenhundred">Seven hundred</string>
    <string name="eighthundred">Eight hundred</string>
    <string name="ninehundred">Nine hundred</string>
    <string name="onethousand">One thousand</string>
    <string name="twothousand">Two thousand</string>
    <string name="threethousand">Three thousand</string>
    <string name="fourthousand">Four thousand</string>
    <string name="fivethousand">Five thousand</string>
    <string name="sixthousand">Six thousand</string>
    <string name="seventhousand">Seven thousand</string>
    <string name="eightthousand">Eight thousand</string>
    <string name="ninethousand">Nine thousand</string>
    <string name="tenthousand">Ten thousand</string>
    <string name="hundredthousand">One hundred thousand</string>
    <string name="onemillion">One million</string>
    <string name="onebillion">One billion</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="jan">January</string>
    <string name="feb">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="novem">November</string>
    <string name="decem">December</string>
    <string name="dayandmonths">Days</string>
    <string name="handw">The Handwritten Russian Alphabet</string>
    <string name="notification_channel_title">First channel</string>
    <string name="notification_channel_desc">my channel is the best because I wrote it</string>
    <string name="dia1">Dialogue 1</string>
    <string name="dia2">Dialogue 2</string>
    <string name="dia3">Dialogue 3</string>
    <string name="dia4">Dialogue 4</string>
    <string name="dia5">Dialogue 5</string>
    <string name="dia6">Dialogue 6</string>
    <string name="dia7">Dialogue 7</string>
    <string name="dia8">Dialogue 8</string>
    <string name="dia9">Dialogue 9</string>
    <string name="dia10">Dialogue 10</string>
    <string name="error_dialog">\" must implement NoticeDialogListener\"</string>
    <string name="input_invalid_error_message">Please fill out all fields</string>
    <string name="category_arg">category_arg</string>
    <string name="word_arg">word_arg</string>
    <string name="zero_words">(0 /0)</string>
    <string name="cat_dialog">CatDialog</string>
    <string name="new_word">New word</string>
    <string name="translation">Translation</string>
    <string name="save">save</string>
    <string name="add_button">add_button</string>
    <string name="let_s_build_your_personal_dictionary">Let\'s build your personal dictionary</string>
    <string name="textview">TextView</string>
    <string name="flipcard">Flipcard</string>
    <string name="speaker">speaker</string>
    <string name="yes_button">yes button</string>
    <string name="no_button">no button</string>
    <string name="continue_learning">Continue Learning</string>
    <string name="add_your_first_words">Add your first words!</string>
    <string name="my_vocabulary">MY VOCABULARY</string>
    <string name="_0">0</string>
    <string name="basicc">Basic</string>
    <string name="new_category">NEW CATEGORY</string>
    <string name="e_g_food">e.g. Food</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="Notification_title">Practice makes perfect</string>
    <string name="Notification_text">Take your next session!</string>
    <string name="main_channel_id">mainChannelId</string>
    <string name="z_nat">to know</string>
    <string name="z_naty">I know</string>
    <string name="z_natyu">you (singular, informal) know</string>
    <string name="z_natye">he/she knows</string>
    <string name="z_natw">we know</string>
    <string name="z_natypl">you (plural, informal)/you (formal) know</string>
    <string name="z_natt">they know</string>
    <string name="z_zhit">to live</string>
    <string name="z_zhity">I live</string>
    <string name="z_zhitu">you (singular, informal) live</string>
    <string name="z_zhite">he/she lives</string>
    <string name="z_zhitw">we live</string>
    <string name="z_zhitpl">you (plural, informal)/you (formal) live</string>
    <string name="z_zhitt">they live</string>
    <string name="z_lovet">to love, to like</string>
    <string name="z_lovety">I love/like</string>
    <string name="z_lovetu">you (singular, informal) love/like</string>
    <string name="z_lovete">he/she loves/likes</string>
    <string name="z_lovetw">we love/like</string>
    <string name="z_lovetpl">you (plural, informal)/you (formal) love/like</string>
    <string name="z_lovett">they love/like</string>
    <string name="z_work">to work</string>
    <string name="add_word">Add Word</string>
    <string name="add_Russ">Word in Russian</string>
    <string name="add_enter_Russ">Enter word in Russian</string>
    <string name="word_tras">Word in your language</string>
    <string name="word_enter_tras">Enter word in your language</string>
</resources>