<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="250dp"
        android:layout_height="380dp"
        app:cardCornerRadius="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="55dp"
                android:src="@drawable/ic_baseline_note_alt_24" />

            <Button
                android:id="@+id/button_hand"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="228dp"
                android:layout_height="43dp"
                android:layout_below="@id/icon"
                android:layout_marginTop="14dp"
                android:background="@drawable/buttongreen"
                android:fontFamily="@font/berlinlight"
                android:text="@string/handwriting"
                android:textAllCaps="false"
                android:textSize="22sp" />

            <Button
                android:id="@+id/button_num"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_below="@id/button_hand"
                android:layout_marginTop="16dp"
                android:background="@drawable/buttongreen"
                android:fontFamily="@font/berlinlight"
                android:text="@string/num"
                android:textAllCaps="false"
                android:textSize="22sp" />

            <Button
                android:id="@+id/button_day"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_below="@id/button_num"
                android:layout_marginTop="16dp"
                android:background="@drawable/buttongreen"
                android:fontFamily="@font/berlinlight"
                android:text="@string/day"
                android:textAllCaps="false"
                android:textSize="22sp" />

            <Button
                android:id="@+id/button_month"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_below="@id/button_day"
                android:layout_marginTop="16dp"
                android:background="@drawable/buttongreen"
                android:fontFamily="@font/berlinlight"
                android:text="@string/month"
                android:textAllCaps="false"
                android:textSize="22sp" />



        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:layout_width="140dp"
        android:layout_height="38dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="134dp"
        android:background="@drawable/buttongreen"
        android:clickable="false"
        android:fontFamily="@font/berlinlight"
        android:text="@string/basic"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView3"
        app:layout_constraintEnd_toEndOf="@+id/cardView3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView3"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:elevation="@dimen/cardview_default_elevation"
        android:id="@+id/button_xlearn"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="345dp"
        android:background="@drawable/buttonforexitpopup"
        android:src="@drawable/ic_outline_close_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView3"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>