<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="250dp"
        android:layout_height="380dp"
        app:cardCornerRadius="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="57dp"
                android:src="@drawable/ic_baseline_menu_book_24" />

            <Button
                android:id="@+id/button_nouns"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/icon"
                android:layout_marginTop="16dp"
                android:background="@drawable/buttongreen"
                android:fontFamily="@font/berlinlight"
                android:text="@string/nouns"
                android:textAllCaps="false"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_verb"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/button_nouns"
                android:layout_marginTop="24dp"
                android:background="@drawable/buttongreen"
                android:fontFamily="@font/berlinlight"
                android:text="@string/verbs"
                android:textAllCaps="false"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_adj"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_below="@id/button_verb"
                android:layout_marginTop="24dp"
                android:background="@drawable/buttongreen"
                android:fontFamily="@font/berlinlight"
                android:text="@string/adj"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:layout_height="50dp" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:layout_width="182dp"
        android:layout_height="39dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/buttongreen"
        android:clickable="false"
        android:fontFamily="@font/berlinlight"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/common"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView3"
        app:layout_constraintEnd_toEndOf="@+id/cardView3"
        app:layout_constraintTop_toTopOf="@+id/cardView3"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:elevation="@dimen/cardview_default_elevation"
        android:id="@+id/button_xlearn"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="345dp"
        android:background="@drawable/buttonforexitpopup"
        android:src="@drawable/ic_outline_close_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView3"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>