<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/homeF">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:padding="16dp"
        tools:context=".presentation.fragment.HomeFragment">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="68dp"
            android:layout_height="61dp"
            android:layout_marginTop="4dp"
            android:adjustViewBounds="true"
            android:src="@drawable/xrr"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:text="Cactus"
            android:textSize="26dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/slogan"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/button_help"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/ic_baseline_more_vert_24"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.944"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="31dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/berlinsans"
            android:text="@string/learn"
            android:textColor="@color/dark_orange"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.531"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/buttongray"
            android:clickable="false"
            android:fontFamily="@font/berlinlight"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/basic"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <ImageView
            android:id="@+id/buttonlearn"
            android:layout_width="match_parent"
            android:layout_height="158dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="44dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/button_gradient"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonlearn"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_marginTop="18dp"
                    android:background="@drawable/buttongray"
                    android:clickable="false"
                    android:fontFamily="@font/berlinlight"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/common"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/buttoncommon" />

                <ImageView
                    android:id="@+id/buttoncommon"
                    android:layout_width="match_parent"
                    android:layout_height="164dp"
                    android:layout_marginStart="14dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitStart"
                    android:src="@drawable/backgroundgreen"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="69dp"
                    android:layout_height="63dp"
                    android:layout_marginTop="22dp"
                    app:layout_constraintEnd_toEndOf="@+id/buttoncommon"
                    app:layout_constraintHorizontal_bias="0.434"
                    app:layout_constraintStart_toStartOf="@+id/buttoncommon"
                    app:layout_constraintTop_toBottomOf="@+id/button"
                    app:srcCompat="@drawable/word" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1">

                <Button

                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_marginTop="18dp"
                    android:background="@drawable/buttongray"
                    android:clickable="false"
                    android:fontFamily="@font/berlinlight"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/conver"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/buttoconver" />

                <ImageView
                    android:id="@+id/buttoconver"
                    android:layout_width="match_parent"
                    android:layout_height="164dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:scaleType="fitEnd"
                    android:src="@drawable/backgroundred"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="64dp"
                    android:layout_height="72dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.463"
                    app:layout_constraintStart_toStartOf="@+id/buttoconver"
                    app:layout_constraintTop_toBottomOf="@+id/button2"
                    app:srcCompat="@drawable/talking" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="89dp"
            android:layout_height="68dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="@+id/buttonlearn"
            app:layout_constraintHorizontal_bias="0.471"
            app:layout_constraintStart_toStartOf="@+id/buttonlearn"
            app:layout_constraintTop_toBottomOf="@+id/button3"
            app:srcCompat="@drawable/teacher" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
